@@ -981,6 +981,32 @@ argument_list|(
 name|STATUSDIR_NAME
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|statusdir
+operator|!=
+literal|null
+condition|)
+block|{
+name|statusdir
+operator|=
+name|TempletonUtils
+operator|.
+name|addUserHomeDirectoryIfApplicable
+argument_list|(
+name|statusdir
+argument_list|,
+name|conf
+operator|.
+name|get
+argument_list|(
+literal|"user.name"
+argument_list|)
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+block|}
 name|ExecutorService
 name|pool
 init|=
