@@ -211,6 +211,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|hdfs
+operator|.
+name|DistributedFileSystem
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|security
 operator|.
 name|UserGroupInformation
@@ -1038,6 +1052,84 @@ block|}
 block|}
 specifier|public
 specifier|static
+name|String
+name|addUserHomeDirectoryIfApplicable
+parameter_list|(
+name|String
+name|origPathStr
+parameter_list|,
+name|String
+name|user
+parameter_list|,
+name|Configuration
+name|conf
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Path
+name|path
+init|=
+operator|new
+name|Path
+argument_list|(
+name|origPathStr
+argument_list|)
+decl_stmt|;
+name|String
+name|result
+init|=
+name|origPathStr
+decl_stmt|;
+comment|// shortcut for s3/asv
+comment|// If path contains scheme, user should mean an absolute path,
+comment|// However, path.isAbsolute tell us otherwise.
+comment|// So we skip conversion for non-hdfs.
+if|if
+condition|(
+operator|!
+operator|(
+name|path
+operator|.
+name|getFileSystem
+argument_list|(
+name|conf
+argument_list|)
+operator|instanceof
+name|DistributedFileSystem
+operator|)
+condition|)
+block|{
+return|return
+name|result
+return|;
+block|}
+if|if
+condition|(
+operator|!
+name|path
+operator|.
+name|isAbsolute
+argument_list|()
+condition|)
+block|{
+name|result
+operator|=
+literal|"/user/"
+operator|+
+name|user
+operator|+
+literal|"/"
+operator|+
+name|origPathStr
+expr_stmt|;
+block|}
+return|return
+name|result
+return|;
+block|}
+specifier|public
+specifier|static
 name|Path
 name|hadoopFsPath
 parameter_list|(
@@ -1128,6 +1220,17 @@ block|}
 block|}
 argument_list|)
 decl_stmt|;
+name|fname
+operator|=
+name|addUserHomeDirectoryIfApplicable
+argument_list|(
+name|fname
+argument_list|,
+name|user
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
 name|URI
 name|u
 init|=
