@@ -643,6 +643,76 @@ name|printStackTrace
 argument_list|()
 expr_stmt|;
 block|}
+try|try
+block|{
+name|TempletonUtils
+operator|.
+name|hadoopFsPath
+argument_list|(
+literal|"a"
+argument_list|,
+operator|new
+name|Configuration
+argument_list|()
+argument_list|,
+literal|"teddybear"
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|fail
+argument_list|(
+literal|"Should not have found /user/teddybear/a"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|FileNotFoundException
+name|e
+parameter_list|)
+block|{
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"/user/teddybear/a"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+comment|// This is our problem -- it means the configuration was wrong.
+name|e
+operator|.
+name|printStackTrace
+argument_list|()
+expr_stmt|;
+name|Assert
+operator|.
+name|fail
+argument_list|(
+literal|"Get wrong exception: "
+operator|+
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
